tests/Compiler/SemanticErrors/missingMain/missingMain.src
function multi2(x: integer) => integer
{
    return (2 * x);
}
